--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 <!-- available balance -->
                 <div class="stats shadow">
                     <div class="stat">
-                      <div class="stat-value">8940</div>
+                      <div id="account-balance" class="stat-value">8940</div>
                       <div class="stat-desc">Available Balance</div>
                     </div>
                   </div>
